Link to release

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h2>Download Binaries</h2>
 
-	<p>Version <a href="https://github.com/bosun-monitor/scollector/tree/{{ site.version.hash }}">{{ site.version.id }}</a> ({{ site.time | date_to_string }})</p>
+	<p>Version <a href="https://github.com/bosun-monitor/scollector/releases/tag/{{ site.version.id }}">{{ site.version.id }}</a> ({{ site.time | date_to_string }})</p>
 
         <ul>
           <li><a href="https://github.com/bosun-monitor/scollector/releases/download/{{site.version.id}}/scollector-linux-amd64"><strong>Linux</strong> amd64</a></li>
